--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -31,7 +34,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -47,7 +53,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/browscap/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -62,7 +71,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/browser-detector/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -77,7 +89,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/cbschuld/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -92,7 +107,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/crawler-detect/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -107,7 +125,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/curated/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -122,7 +143,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/donatj/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -137,7 +161,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/endorphin/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -152,7 +179,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/matomo/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -167,7 +197,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/mobile-detect/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -182,7 +215,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/sinergi/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -197,7 +233,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/ua-parser-js/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -212,7 +251,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/ua-parser-php/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -227,7 +269,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/whichbrowser-php/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -242,7 +287,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/woothee-php/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -257,7 +305,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/zsxsoft/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -272,7 +323,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "tests/ua-parser-js/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -288,7 +342,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/3rd-eden-useragent/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -303,7 +360,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/amplitude-ua-parser-js/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -318,7 +378,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/bowser/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -333,7 +396,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/bowser/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -348,7 +414,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/browscap-php/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -363,7 +432,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/browser-detect/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -378,7 +450,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/browser-detector/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -393,7 +468,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/cbschuld/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -408,7 +486,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/crawler-detect/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -423,7 +504,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/detect-browser/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -438,7 +522,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/device-detector/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -453,7 +540,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/device-detector-node/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -468,7 +558,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/donatj/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -483,7 +576,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/endorphin/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -498,7 +594,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/express-useragent/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -513,7 +612,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/fex-uadevice/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -528,7 +630,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/financial-times-useragent_parser/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -543,7 +648,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/hotoo-detector/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -558,7 +666,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/jenssegers-agent/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -573,7 +684,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/journyio-user-agent-parser/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -588,7 +702,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/matomo/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -603,7 +720,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/mobile-detect/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -618,7 +738,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/node-device-detector/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -633,7 +756,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/platformjs/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -648,7 +774,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/sinergi/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -663,7 +792,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/ua-parser-js/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -678,7 +810,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/ua-parser-php/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -693,7 +828,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/vigour-ua/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -708,7 +846,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/whichbrowser-js/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -723,7 +864,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/whichbrowser-php/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -738,7 +882,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/wolfcast/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -753,7 +900,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "parsers/woothee-js/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -768,7 +918,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/woothee-php/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -783,7 +936,10 @@ updates:
   - package-ecosystem: "composer"
     directory: "parsers/zsxsoft/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
@@ -799,9 +955,10 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
-      time: "05:30"
-      timezone: "Europe/Berlin"
+      interval: "weekly"
+      day: "sunday"
+      time: "03:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
     reviewers:
       - "mimmi20"
