--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,10 @@
     "symfony/console": "^v6.1.4"
   },
   "require-dev": {
-    "maglnet/composer-require-checker": "^4.2.0",
     "mimmi20/coding-standard": "^3.0.10",
     "phpstan/extension-installer": "^1.1.0",
     "phpstan/phpstan": "^1.8.5",
-    "phpstan/phpstan-deprecation-rules": "^1.0.0",
-    "vimeo/psalm": "^v4.27.0"
+    "phpstan/phpstan-deprecation-rules": "^1.0.0"
   },
   "minimum-stability": "stable",
   "prefer-stable": true,
